update campground layout

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -22,6 +22,9 @@
 
     <!-- Map Styles-->
     <link href="/stylesheets/app.css" rel="stylesheet" />
+
+    <!-- Extra Css-->
+    <link rel="stylesheet" href="/stylesheets/index.css" />
   </head>
   <body class="d-flex flex-column vh-100">
     <!-- Navbar-->
