--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,39 +1,60 @@
 <% layout('layouts/boilerplate')%>
-<div id="cluster-map"></div>
-<div class="container">
-  <h1>All Campgrounds</h1>
 
-  <% for (let campground of campgrounds){%>
-  <div class="card mb-3">
-    <div class="row">
-      <div class="col-md-4">
-        <%if(campground.images.length) {%>
-        <img class="img-fluid" alt="" src="<%=campground.images[0].url%>" />
-        <% }else {%>
+<!--Grid Layout -->
+<div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4">
+  <% for (let campground of campgrounds) { %>
+  <div class="col">
+    <div class="card h-100">
+      <a href="/campgrounds/<%=campground._id%>">
         <img
-          class="img-fluid"
-          alt=""
-          src="https://res.cloudinary.com/douqbebwk/image/upload/v1600103881/YelpCamp/lz8jjv2gyynjil7lswf4.png"
+          src="<%= campground.images[0].url %>"
+          class="card-img-top square img-fluid"
+          alt="..."
         />
-        <% } %>
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title"><%= campground.title %></h5>
-
-          <p class="card-text"><%= campground.description %></p>
-          <p class="card-text">
-            <small class="text-muted"><%= campground.location%></small>
-          </p>
-          <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>"
-            >View <%=campground.title%></a
-          >
+      </a>
+      <div class="card-body">
+        <!-- Title -->
+        <h5 class="d-inline card-title"><%= campground.title %></h5>
+        <!-- Rating -->
+        <div class="d-inline float-end">
+          <img
+            class="d-inline align-baseline"
+            src="https://res.cloudinary.com/dbkdxsoia/image/upload/v1662231684/YelpCamp/star-svgrepo-com_gxflaa.svg"
+            alt="star icon"
+            width="12"
+            height="12"
+          />
+          4.2
         </div>
+        <!-- Location -->
+        <h6 class="card-subtitle mb-2 mt-2 text-muted">
+          <%= campground.location %>
+        </h6>
+        <!-- Price -->
+        <p class="card-text">
+          <small class="text-muted"
+            ><b><%= campground.price %> CHF</b> / per night
+          </small>
+        </p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted"
+          >Submitted by: <%= campground.author.username %></small
+        >
       </div>
     </div>
   </div>
-  <% }%>
+  <% } %>
 </div>
+
+<div class="position-sticky bottom-0" style="width: 100%; height: 80px">
+  <div class="position-absolute top-0 start-50 translate-middle">
+    <a href="/campgrounds/map">
+      <button type="button" class="btn btn-dark btn-lg">Show on the map</button>
+    </a>
+  </div>
+</div>
+
 <script>
   const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
   const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
