--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,9 +1,15 @@
 #cluster-map {
   width: 100%;
-  height: 500px;
+  height: 100vh;
 }
 
 #map {
   width: 100%;
   height: 300px;
+}
+
+.pop-up-image {
+  object-fit: cover;
+  height: 150px;
+  width: 100%;
 }
