--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,7 +4,7 @@
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <!-- Left Column-->
-  <div class="col scrollable">
+  <div class="col">
     <!-- Campground Info -->
     <div class="sticky-md-top card mb-3">
       <!-- Carousel Images-->
