add rating feature

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -24,7 +24,13 @@
             width="12"
             height="12"
           />
-          4.2
+          <!-- If no ratings display n/a  else display rating-->
+          <% if (campground.rating === 0){ %>
+          <p class="d-inline">n/a</p>
+          <% } else { %>
+          <div class="d-inline"><%= campground.rating %></div>
+          <br />
+          <% } %>
         </div>
         <!-- Location -->
         <h6 class="card-subtitle mb-2 mt-2 text-muted">
