--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,36 +1,34 @@
 body {
   height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://images.unsplash.com/photo-1559521783-1d1599583485?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url("https://res.cloudinary.com/dbkdxsoia/image/upload/v1663156686/YelpCamp/AntonPonton_National_Geography_photo_of_outdoor_campground_with_e06e2d41-a412-43af-ab78-fc574d52b950_retouch_m8eh8u.png");
   background-size: cover;
-  background-position: center;
-  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
-}
-.cover-container {
-  max-width: 60vw;
+  background-position: bottom;
+  text-align: center;
+  text-shadow: 0 0.05rem 0.1rem rgba(255, 255, 255, 0.9);
+  box-shadow: inset 0 0 5rem rgba(255, 255, 255, 0.2);
 }
 
-.nav-link {
-  padding: 0.25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
-  margin-left: 1rem;
-  border-bottom: 0.25rem solid transparent;
+h1 {
+  font-weight: bolder;
 }
 
-.nav-link:hover {
-  color: rgba(255, 255, 255, 0.5);
-  border-bottom-color: rgba(255, 255, 255, 0.5);
+span {
+  color: #ffc107;
+}
+footer {
+  position: fixed;
+  height: 50px;
+  bottom: 0;
+  width: 100%;
 }
 
-.nav-link.active {
+.btn-secondary {
+  background-color: rgba(0, 0, 0, 0);
   color: white;
-  border-bottom-color: white;
-}
-
-.btn-secondary,
-.btn-secondary:hover {
-  color: #333;
+  font-weight: bold;
   text-shadow: none;
+}
+.btn-secondary:hover {
+  background-color: #ffc107;
 }
