--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -56,7 +56,14 @@
 <div class="position-sticky bottom-0" style="width: 100%; height: 80px">
   <div class="position-absolute top-0 start-50 translate-middle">
     <a href="/campgrounds/map">
-      <button type="button" class="btn btn-dark btn-lg">Show on the map</button>
+      <button
+        type="button"
+        class="btn btn-warning btn-lg rounded-pill shadow border-secondary botder-2"
+      >
+        Show on the map
+      </button>
     </a>
   </div>
 </div>
+
+<script src="/javascripts/search.js"></script>
