--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,12 +1,12 @@
-<nav class="navbar sticky-top navbar-expand-lg bg-light">
-  <div class="container-fluid">
+<nav class="navbar sticky-top navbar-expand-lg bg-white border-bottom">
+  <div class="container-fluid d-flex justify-content-between">
     <!-- Logo -->
     <a class="navbar-brand" style="color: yellow" href="/">
       <img
         src="https://res.cloudinary.com/dbkdxsoia/image/upload/v1662219472/YelpCamp/add-svgrepo-com_ifbpuk.svg"
         alt=""
-        width="48"
-        height="48"
+        width="42"
+        height="42"
       />
     </a>
     <!-- Hamburger for smaller screen sizes -->
@@ -24,21 +24,57 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <!-- View Campgrounds -->
+        <!-- All Campgrounds -->
         <li class="nav-item">
-          <a class="nav-link" href="/campgrounds">View campgrounds</a>
+          <a class="nav-link" href="/campgrounds">All campgrounds</a>
         </li>
         <!-- Add Campground Link-->
         <li class="nav-item">
           <a class="nav-link" href="/campgrounds/new">Add Campground</a>
         </li>
       </ul>
+
+      <!-- Search Bar -->
+      <div class="search-box mx-auto shadow-sm">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-search"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+          />
+        </svg>
+        <form action="/campgrounds" method="GET" class="d-flex flex-grow-1">
+          <input
+            type="search"
+            name="search"
+            placeholder="type here..."
+            id="searchBar"
+            class="search-input form-control d-flex flex-grow-1"
+            data-search
+          />
+
+          <input
+            type="submit"
+            value="Search"
+            class="btn btn-sm round-search-btn"
+          />
+        </form>
       </div>
 
+      <!-- Login / Register -->
       <ul class="navbar-nav ms-auto">
         <% if(!currentUser) { %>
         <a class="nav-link" href="/login">Login</a>
-        <a class="nav-link" href="/register">Register</a>
+        <a
+          class="nav-link rounded-pill border border-warning border-2"
+          href="/register"
+          >Register</a
+        >
         <% }else { %>
         <a class="nav-link" href="/logout">Logout</a>
         <% } %>
