--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -58,9 +58,22 @@
     <a href="/campgrounds/map">
       <button
         type="button"
-        class="btn btn-warning btn-lg rounded-pill shadow border-secondary botder-2"
+        class="btn btn-dark btn-lg rounded-pill shadow-lg px-4 py-2"
       >
-        Show on the map
+        Show map
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-map"
+          viewBox="0 0 16 16"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M15.817.113A.5.5 0 0 1 16 .5v14a.5.5 0 0 1-.402.49l-5 1a.502.502 0 0 1-.196 0L5.5 15.01l-4.902.98A.5.5 0 0 1 0 15.5v-14a.5.5 0 0 1 .402-.49l5-1a.5.5 0 0 1 .196 0L10.5.99l4.902-.98a.5.5 0 0 1 .415.103zM10 1.91l-4-.8v12.98l4 .8V1.91zm1 12.98 4-.8V1.11l-4 .8v12.98zm-6-.8V1.11l-4 .8v12.98l4-.8z"
+          />
+        </svg>
       </button>
     </a>
   </div>
