--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
       <div>
         <h1>Welcome to <span>Yelp-Camp!</span></h1></br>
         <!-- <h5>Share Your Campground With The World!</h5></br> -->
-        <a href="/campgrounds" class="btn btn-secondary btn-lg border-white bg-none">Explore</a>
+        <a href="/campgrounds" class="btn btn-secondary btn-lg border-white bg-none rounded-pill">Explore</a>
       </div>
     </div>
   <footer class="footer ficxed-bottom text-white-50">
