--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,15 +2,17 @@
 
 <div class="container d-flex justify-content-center align-items-center mt-5">
   <div class="row">
-    <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-      <div class="card shadow">
+    <div>
+      <div class="card shadow" style="width: 22rem">
         <img
-          src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+          src="https://res.cloudinary.com/dbkdxsoia/image/upload/v1662219472/YelpCamp/add-svgrepo-com_ifbpuk.svg"
           alt=""
-          class="card-img-top"
+          width="84"
+          height="84"
+          class="card-img-top mt-5 mb-3"
         />
         <div class="card-body">
-          <h5 class="card-title">Login</h5>
+          <h5 class="card-title text-center">Login</h5>
           <form action="/login" method="POST" class="validated-form" novalidate>
             <div class="mb-3">
               <label class="form-label" for="username">Username</label>
@@ -37,7 +39,19 @@
               <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="d-grid">
-              <button class="btn btn-success btn-block">Login</button>
+              <button
+                class="btn btn-light btn-block mb-3 border border-light shadow-sm"
+              >
+                Login
+              </button>
+            </div>
+            <div class="text-center text-black-50 mt-2">
+              <p>
+                <small>
+                  Don't have an account? Register
+                  <a class="link-dark" href="/register">here</a>!
+                </small>
+              </p>
             </div>
           </form>
         </div>
